add translations. Fix bugs from issue 33

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -2,6 +2,7 @@
 electric-rail=Strömungsschiene
 railpole-prototype=Strommast für Strömungsschiene
 electric-locomotive=elektrische Lokomotive
+electric-fuel=Strom
 
 [item-description]
 straight-rail-power=Schiene, die mit Strommast angeschlossen werden kannn, dann wird mit Strom - und Schalt - netzwerk, verbunden. Strom kann auch vo elektrische Loko benutzt werden.
@@ -14,9 +15,13 @@ curved-rail-power=Gebogen Strömungsschiene
 rail-pole=Strommast für Strömungsschiene
 railpole-prototype=Strommast für Strömungsschiene
 electric-locomotive=elektrische Lokomotive
+rail-accu=Rail Power System
 
 [technology-name]
 rail-power-system=Strömungsschiene System
 
 [technology-description]
 rail-power-system=Lass, elektrische Züge zu benutzen
+
+[fuel-category-name]
+electrical=Strom
