--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,6 +2,7 @@
 electric-rail=Rail with power
 railpole-prototype=rail electric pole
 electric-locomotive=electric locomotive
+electric-fuel=electricity
 
 [item-description]
 straight-rail-power=rail that can be connected to a rail electric pole supplier, and transmit electricity and signals along its course, and to hybrid trains
@@ -14,9 +15,13 @@ curved-rail-power=Curved rail with power
 rail-pole=rail electric pole
 railpole-prototype=rail electric pole
 electric-locomotive=electric locomotive
+rail-accu=Rail Power System
 
 [technology-name]
 rail-power-system=Rail Power System
 
 [technology-description]
 rail-power-system=Allow to use electric trains
+
+[fuel-category-name]
+electrical=electricity
