--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -2,6 +2,7 @@
 electric-rail=Электрифицированные рельсы
 railpole-prototype=Силовой контактор
 electric-locomotive=электрический локомотив
+electric-fuel=электричество
 
 [item-description]
 straight-rail-power=Подключается к электрической сети через силовой контактор. Они передают сигналы и электроэнергию (и на электровозы) по всей своей длине.
@@ -14,9 +15,13 @@ curved-rail-power=Электрифицированные рельсы
 rail-pole=Силовой контактор
 railpole-prototype=Силовой контактор
 electric-locomotive=электрический локомотив
+rail-accu=Rail Power System
 
 [technology-name]
 rail-power-system=Электрификация железных дорог
 
 [technology-description]
 rail-power-system=Позволяет использовать поезда на электротяге
+
+[fuel-category-name]
+electrical=электричество
