--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -2,6 +2,7 @@
 powered-rail=Rail électric
 railpole-prototype=pylone pour rail
 electric-locomotive=locomotive électrique
+electric-fuel=électricité
 
 [item-description]
 straight-rail-power=rail qui peut être connecté à une pylone pour rail et transmettre l'électricité et les signaux de circuit à tous les rails connectés, ainsi qu'aux trains électriques
@@ -14,9 +15,13 @@ curved-rail-power=Rail électric courbé
 rail-pole=pylone pour rail
 railpole-prototype=pylone pour rail
 electric-locomotive=locomotive électrique
+rail-accu=Rail Power System
 
 [technology-name]
 rail-power-system=Système de trains électriques
 
 [technology-description]
 rail-power-system=Permet l'utilisation des trains électriques
+
+[fuel-category-name]
+electrical=électricité
