add new tec dedicated to locos. Remove batteries from receipt for locos. Add electronic for railway

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -19,9 +19,11 @@ rail-accu=Rail Power System
 
 [technology-name]
 rail-power-system=Strömungsschiene System
+electric-locomotive=elektrische Lokomotive
 
 [technology-description]
 rail-power-system=Lass, elektrische Züge zu benutzen
+electric-locomotive=elektrische Lokomotive um mit electrische Schienen zu benutzen
 
 [fuel-category-name]
 electrical=Strom
