--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -19,9 +19,11 @@ rail-accu=Rail Power System
 
 [technology-name]
 rail-power-system=Rail Power System
+electric-locomotive=electric locomotive
 
 [technology-description]
 rail-power-system=Allow to use electric trains
+electric-locomotive=electric locomotive to use with rails electrified
 
 [fuel-category-name]
 electrical=electricity
