--- a/locale/fr/locale.cfg
+++ b/locale/fr/locale.cfg
@@ -19,9 +19,11 @@ rail-accu=Rail Power System
 
 [technology-name]
 rail-power-system=Système de trains électriques
+electric-locomotive=locomotive électrique
 
 [technology-description]
 rail-power-system=Permet l'utilisation des trains électriques
+electric-locomotive=Locomotive électrique à utiliser sur les rails électrifiés
 
 [fuel-category-name]
 electrical=électricité
