--- a/locale/uk/locale.cfg
+++ b/locale/uk/locale.cfg
@@ -19,9 +19,11 @@ rail-accu=Rail Power System
 
 [technology-name]
 rail-power-system=Електрифікація залізниць
+electric-locomotive=електричний локомотив
 
 [technology-description]
 rail-power-system=Дозволяє використовувати поїзди на електротязі
+electric-locomotive=Електричний локомотив для використання на електрифікованих рейках
 
 [fuel-category-name]
 electrical=електрика
